err/sortalgo.err
Listing '.'...
Listing './bin'...
Compiling './bin/sort.py'...
***   File "./bin/sort.py", line 18
    print """%s sorting_method
		insert_sort
		"""% sys.argv[0]
                              
		           
		  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SortAlgo'...
Compiling './lib/python3.5/site-packages/SortAlgo/__main__.py'...
***   File "./lib/python3.5/site-packages/SortAlgo/__main__.py", line 21
    print 'Before sort', vals[:5], '...', vals[-5:]
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/SortAlgo/readme'...
Listing './lib/python3.5/site-packages/SortAlgo-0.2.0b3.egg-info'...
Compiling './lib/python3.5/site-packages/TestFunc.py'...
*** Sorry: IndentationError: unindent does not match any outer indentation level (TestFunc.py, line 11)
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
